Changed some metadata

--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "string-diagram-maker",
+  "homepage": "https://dustbringer.io/string-diagram-maker",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -25,7 +26,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "deploy": "gh-pages -d public"
+    "predeploy": "yarn build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
